[gd_scene load_steps=15 format=3 uid="uid://3ttjptxjrg0r"]

[ext_resource type="Script" path="res://scripts/environment/green_02.gd" id="1_bcqi8"]
[ext_resource type="PackedScene" uid="uid://cp7bgpmhe3im" path="res://scenes/characters/player.tscn" id="3_rqeu7"]
[ext_resource type="PackedScene" uid="uid://d380s81nxg0sl" path="res://scenes/ui/ui.tscn" id="5_w85c3"]
[ext_resource type="PackedScene" uid="uid://dtry6ublais14" path="res://scenes/environment/bg_particles.tscn" id="6_yqvqw"]
[ext_resource type="Script" path="res://scripts/misc/camera2D.gd" id="7_lklra"]
[ext_resource type="PackedScene" uid="uid://pffpnluyn882" path="res://scenes/environment/tile_map.tscn" id="8_6661b"]
[ext_resource type="PackedScene" uid="uid://bva065eirjae3" path="res://scenes/objects/orbs.tscn" id="12_csjpi"]
[ext_resource type="PackedScene" uid="uid://7yth7o8h2odp" path="res://scenes/objects/ladder.tscn" id="13_4t57r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_efhj2"]
size = Vector2(15.8355, 16.3317)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v164d"]
size = Vector2(7.7887, 40.4473)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_klnkw"]
size = Vector2(7.84995, 62.7633)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mror4"]
size = Vector2(6.0947, 33.5951)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_00e3d"]
size = Vector2(6.41905, 21.1261)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1efos"]
size = Vector2(6.0172, 54.8897)

[node name="World" type="Node2D"]
script = ExtResource("1_bcqi8")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 18.7265
offset_top = -24.0692
offset_right = 675.727
offset_bottom = 579.931
scale = Vector2(1.14428, 0.790205)
color = Color(0.0941176, 0.0941176, 0.0627451, 1)

[node name="Player" parent="." instance=ExtResource("3_rqeu7")]
z_index = 1
position = Vector2(668.667, -12.3611)
ACCELERATION = 20

[node name="Camera2D" type="Camera2D" parent="Player"]
limit_left = 30
limit_top = 0
limit_right = 712
limit_bottom = 400
position_smoothing_speed = 10.0
drag_horizontal_enabled = true
drag_vertical_enabled = true
script = ExtResource("7_lklra")

[node name="TileMap" parent="." instance=ExtResource("8_6661b")]
position = Vector2(0.222461, 0.0534436)
cell_quadrant_size = 8
layer_0/tile_data = PackedInt32Array(196695, 0, 1, 262231, 0, 1, 327767, 0, 1, 393303, 0, 1, 458839, 0, 1, 524375, 0, 1, 1245271, 0, 1, 1310807, 0, 1, 1441879, 0, 1, 3145815, 65536, 0, 3145816, 65536, 0, 2097239, 65536, 0, 2293847, 0, 1, 2359383, 0, 1, 2424919, 0, 1, 2490455, 0, 1, 2555991, 0, 1, 2621527, 0, 2, 87, 0, 1, 65623, 0, 1, 131159, 0, 1, 3145802, 65536, 0, 3145731, 65536, 0, 3145732, 65536, 0, 3145733, 65536, 0, 3145734, 65536, 0, 3145735, 65536, 0, 3145736, 65536, 0, 3145737, 65536, 0, 3145738, 65536, 0, 3145739, 65536, 0, 3145740, 65536, 0, 3145741, 65536, 0, 3145742, 65536, 0, 3145743, 65536, 0, 3145744, 65536, 0, 3145745, 65536, 0, 3145746, 65536, 0, 3145747, 65536, 0, 3145748, 65536, 0, 3145749, 65536, 0, 3145750, 65536, 0, 589897, 262144, 0, 589898, 262144, 0, 589899, 262144, 0, 589900, 262144, 0, 589901, 262144, 0, 589902, 262144, 0, 589903, 262144, 0, 589904, 262144, 0, 589905, 262144, 0, 589906, 262144, 0, 589907, 262144, 0, 589908, 262144, 0, 589909, 262144, 0, 589910, 262144, 0, 589896, 0, 0, 655432, 0, 1, 720968, 0, 1, 786504, 0, 1, 983113, 262144, 2, 983114, 262144, 2, 983115, 262144, 2, 983116, 262144, 2, 589911, 131072, 0, 262228, 393216, 1, 327764, 393216, 2, 393300, 393216, 2, 458836, 393216, 2, 524372, 393216, 2, 262227, 393216, 0, 262226, 589824, 1, 327762, 589824, 2, 393298, 589824, 2, 458834, 589824, 2, 524370, 589824, 2, 262229, 524288, 0, 262225, 458752, 0, 262224, 589824, 0, 393295, 458752, 0, 393296, 393216, 0, 393297, 393216, 0, 458831, 393216, 2, 524367, 393216, 2, 524368, 458752, 1, 524369, 458752, 1, 524371, 524288, 1, 524374, 524288, 1, 262230, 458752, 0, 524366, 589824, 2, 524365, 589824, 2, 458829, 589824, 2, 917515, 0, 0, 917516, 65536, 0, 983071, 262144, 2, 983072, 262144, 2, 983073, 262144, 2, 983074, 262144, 2, 983075, 262144, 2, 917559, 65536, 0, 917560, 65536, 0, 917561, 65536, 0, 917562, 65536, 0, 917563, 65536, 0, 917564, 65536, 0, 917565, 65536, 0, 983107, 262144, 2, 983108, 262144, 2, 983109, 262144, 2, 983110, 262144, 2, 983111, 262144, 2, 589849, 65536, 0, 589850, 65536, 0, 589851, 65536, 0, 589852, 65536, 0, 589853, 65536, 0, 589868, 65536, 0, 589869, 65536, 0, 589870, 65536, 0, 589871, 65536, 0, 589872, 65536, 0, 589873, 65536, 0, 589874, 327680, 0, 131126, 65536, 0, 131127, 65536, 0, 131128, 65536, 0, 131129, 65536, 0, 131130, 65536, 0, 131131, 65536, 0, 131132, 65536, 0, 131133, 65536, 0, 131134, 65536, 0, 131135, 65536, 0, 131136, 65536, 0, 131137, 65536, 0, 131138, 65536, 0, 131139, 65536, 0, 327684, 327680, 1, 393220, 327680, 1, 458756, 327680, 1, 524292, 327680, 1, 589828, 327680, 1, 655364, 327680, 1, 720900, 327680, 1, 786436, 327680, 1, 851972, 327680, 1, 917508, 327680, 1, 983044, 327680, 1, 1048580, 327680, 1, 1114116, 327680, 1, 1179652, 327680, 1, 1245188, 327680, 1, 1310724, 327680, 1, 131080, 262144, 2, 131081, 262144, 2, 131082, 262144, 2, 131083, 262144, 2, 131084, 262144, 2, 131085, 262144, 2, 131086, 262144, 2, 131087, 262144, 2, 131088, 262144, 2, 131089, 262144, 2, 131090, 262144, 2, 131091, 262144, 2, 131092, 262144, 2, 131093, 262144, 2, 131094, 262144, 2, 131095, 262144, 2, 131096, 262144, 2, 131097, 262144, 2, 131098, 262144, 2, 131099, 262144, 2, 131100, 262144, 2, -65498, 262144, 2, -65497, 262144, 2, -65496, 262144, 2, -65495, 262144, 2, -65494, 262144, 2, -65493, 262144, 2, -65492, 262144, 2, -65491, 262144, 2, -65490, 262144, 2, -65481, 262144, 2, -65480, 262144, 2, -65479, 262144, 2, -65478, 262144, 2, -65477, 262144, 2, -65476, 262144, 2, -65475, 262144, 2, -65474, 262144, 2, -65473, 262144, 2, -65472, 262144, 2, -65471, 262144, 2, -65470, 262144, 2, -65469, 262144, 2, -65468, 262144, 2, -65467, 262144, 2, -65466, 262144, 2, -65465, 262144, 2, -65464, 262144, 2, -65463, 262144, 2, -65462, 327680, 2, -130985, 0, 1, -65449, 0, 1, 1966084, 327680, 1, 2031620, 327680, 1, 2097156, 327680, 1, 2621444, 327680, 1, 2686980, 327680, 1, 3145803, 65536, 0, 3145804, 65536, 0, 3145805, 65536, 0, 3145806, 65536, 0, 3145807, 65536, 0, 3145808, 65536, 0, 3145809, 65536, 0, 3145810, 65536, 0, 3145811, 65536, 0, 3145812, 65536, 0, 3145813, 65536, 0, 3145814, 65536, 0, 3145817, 65536, 0, 1703955, 262144, 2, 1703956, 262144, 2, 1638421, 65536, 0, 1703957, 262144, 2, 1638422, 65536, 0, 1703958, 262144, 2, 1703966, 65536, 0, 1769502, 262144, 2, 1703967, 65536, 0, 1769503, 262144, 2, 1703968, 65536, 0, 1703969, 65536, 0, 1703970, 65536, 0, 1703971, 65536, 0, 1703972, 65536, 0, 1703973, 65536, 0, 1703974, 65536, 0, 1703975, 65536, 0, 1769511, 262144, 2, 1703976, 65536, 0, 1769512, 262144, 2, 1966131, 65536, 0, 2031667, 262144, 2, 1966132, 65536, 0, 1966133, 65536, 0, 1966134, 65536, 0, 1966135, 65536, 0, 1966136, 65536, 0, 1966137, 65536, 0, 1966138, 65536, 0, 1966139, 65536, 0, 1966140, 65536, 0, 1966141, 65536, 0, 1966142, 65536, 0, 1966143, 65536, 0, 1966144, 65536, 0, 1966145, 65536, 0, 2031681, 262144, 2, 2097231, 0, 0, 2097232, 65536, 0, 2097233, 65536, 0, 2097234, 65536, 0, 2097235, 65536, 0, 2097236, 65536, 0, 2097237, 65536, 0, 2097238, 65536, 0, 2687001, 65536, 0, 2687002, 65536, 0, 2687003, 65536, 0, 2687004, 65536, 0, 2687030, 65536, 0, 2949181, 65536, 0, 2949182, 65536, 0, 2949183, 65536, 0, 2949184, 65536, 0, 2949185, 65536, 0, 2949186, 327680, 0, 3014723, 65536, 0, 3014724, 65536, 0, 3014725, 65536, 0, 3014726, 65536, 0, 2228238, 65536, 0, 2228239, 65536, 0, 2228240, 65536, 0, 2228241, 65536, 0, 2228242, 65536, 0, 2228243, 65536, 0, 2293779, 262144, 2, 2359315, 327680, 2, 2097240, 65536, 0, 1835040, 0, 2, 1835041, 262144, 2, 1835042, 262144, 2, 1835043, 262144, 2, 1835044, 262144, 2, 1835045, 262144, 2, 1835046, 327680, 2, 2162741, 262144, 2, 2162742, 262144, 2, 2162743, 262144, 2, 2162744, 262144, 2, 2162745, 262144, 2, 2162746, 262144, 2, 2162747, 262144, 2, 2162748, 262144, 2, 2162749, 327680, 2, 2097214, 262144, 2, 2097215, 262144, 2, 2097216, 327680, 2, 589848, 65536, 0, 655411, 327680, 0, 524318, 65536, 0, 524317, 0, 0, 524319, 65536, 0, 524320, 65536, 0, 524323, 65536, 0, 524322, 65536, 0, 524321, 65536, 0, 524324, 65536, 0, 524325, 65536, 0, 524326, 65536, 0, 524327, 65536, 0, 524328, 65536, 0, 524329, 65536, 0, 524330, 65536, 0, 262149, 262144, 2, 262150, 327680, 2, 196615, 327680, 2, 131101, 327680, 2, 65566, 262144, 2, 65567, 327680, 2, 32, 262144, 2, 33, 262144, 2, 34, 262144, 2, 35, 262144, 2, 36, 262144, 2, 37, 327680, 2, 196661, 0, 1, 262199, 262144, 2, 262200, 262144, 2, 262201, 262144, 2, 262202, 262144, 2, 262203, 262144, 2, 262204, 262144, 2, 262208, 262144, 2, 262209, 262144, 2, 262205, 262144, 2, 262206, 262144, 2, 262207, 262144, 2, 262210, 262144, 2, 196676, 327680, 2, 852032, 65536, 0, 852033, 65536, 0, 852034, 65536, 0, 852035, 65536, 0, 852036, 65536, 0, 852037, 65536, 0, 1048629, 262144, 2, 1048630, 262144, 2, 1048631, 262144, 2, 1048632, 262144, 2, 1048633, 262144, 2, 1048634, 262144, 2, 1048635, 262144, 2, 1048636, 262144, 2, 1048637, 262144, 2, 1048638, 262144, 2, 1048639, 262144, 2, 1048640, 262144, 2, 1048587, 0, 2, 1048588, 262144, 2, 1048589, 262144, 2, 1048600, 262144, 2, 1048601, 262144, 2, 1048602, 262144, 2, 1048603, 262144, 2, 1048604, 262144, 2, 1048605, 262144, 2, 1048616, 262144, 2, 1048617, 262144, 2, 1048618, 262144, 2, 1048619, 262144, 2, 1048612, 0, 2, 1048613, 262144, 2, 1048614, 262144, 2, 1048615, 262144, 2, 1048620, 262144, 2, 1048621, 262144, 2, 1114158, 0, 2, 1114159, 262144, 2, 1114160, 327680, 2, 1048625, 262144, 2, 1048626, 262144, 2, 1048627, 262144, 2, 851981, 0, 0, 851982, 65536, 0, 851983, 65536, 0, 1703959, 262144, 2, 1769479, 262144, 2, 1769480, 262144, 2, 1769481, 262144, 2, 1769482, 262144, 2, 1769483, 262144, 2, 1769484, 262144, 2, 1769485, 262144, 2, 1769486, 262144, 2, 1769487, 262144, 2, 1769488, 262144, 2, 1769489, 262144, 2, 1638423, 65536, 0, 1572881, 65536, 0, 1572879, 65536, 0, 1572880, 65536, 0, 1572882, 65536, 0, 1572883, 65536, 0, 1572884, 65536, 0, 1572885, 65536, 0, 2818072, 0, 1, 3080215, 0, 1, 2621469, 0, 0, 2621470, 65536, 0, 2621471, 65536, 0, 2555941, 0, 0, 2555942, 65536, 0, 2555943, 65536, 0, 2555944, 65536, 0, 2621481, 65536, 0, 2621482, 65536, 0, 2621483, 65536, 0, 2621484, 65536, 0, 2621485, 65536, 0, 2621486, 65536, 0, 2621487, 65536, 0, 2621473, 65536, 0, 2621474, 65536, 0, 2621475, 65536, 0, 2621476, 65536, 0, 2621472, 65536, 0, 2555945, 327680, 0, 2883643, 65536, 0, 2883644, 327680, 0, 2621493, 65536, 0, 2752568, 65536, 0, 2818106, 327680, 0, 2621492, 65536, 0, 2621491, 65536, 0, 2621490, 65536, 0, 2621489, 65536, 0, 2621488, 65536, 0, 3014727, 65536, 0, 2228305, 262144, 2, 2228306, 262144, 2, 2228307, 262144, 2, 2228308, 262144, 2, 2228309, 262144, 2, 2228310, 262144, 2, 2228244, 65536, 0, 2228245, 327680, 0, 2424850, 327680, 2, 2490385, 327680, 2, 2490384, 262144, 2, 2490383, 262144, 2, 2490382, 262144, 2, 2490381, 262144, 2, 2490380, 262144, 2, 2490379, 262144, 2, 2490378, 262144, 2, 2490377, 262144, 2, 2555912, 262144, 2, 2555911, 262144, 2, 2555910, 262144, 2, 2555909, 262144, 2, 2752516, 327680, 1, 2818052, 327680, 1, 2883588, 327680, 1, 2949124, 327680, 2, 1376261, 65536, 0, 1507335, 65536, 0, 1769478, 262144, 2, 1835013, 327680, 2, 2162693, 65536, 0, 2162694, 65536, 0, 1048628, 262144, 2, 1179667, 262144, 2, 1179668, 262144, 2, 1179669, 262144, 2, 1179670, 327680, 2, 1114134, 262144, 2, 1114135, 327680, 2, 1114127, 262144, 2, 1114126, 0, 2, 1114128, 262144, 2, 1179665, 0, 2, 1179666, 262144, 2, 1048653, 0, 2, 1048654, 262144, 2, 1114191, 0, 2, 1114192, 262144, 2, 1114193, 262144, 2, 1114194, 262144, 2, 1114195, 262144, 2, 1114196, 262144, 2, 1114197, 262144, 2, 1114198, 262144, 2, 1835097, 720896, 8, 1900633, 720896, 8, 1966169, 720896, 8, 3014657, 720896, 8, 3080193, 720896, 8, 3080194, 720896, 8, 3014658, 720896, 8, 2031705, 720896, 8, 1769561, 720896, 8, 3080281, 720896, 8, 3014745, 720896, 8, 2949209, 720896, 8, 2883673, 720896, 8, 2818137, 720896, 8, 2752601, 720896, 8, 2687065, 720896, 8, 1507415, 0, 1, 1572951, 0, 1, 1638487, 0, 2, 1704024, 0, 2, 852031, 65536, 0, 852038, 65536, 0, 524331, 65536, 0, 524332, 327680, 0, 720948, 327680, 0, 786485, 327680, 0, 852022, 327680, 0, 589847, 0, 0, 655382, 0, 0, 720917, 0, 0, 786452, 65536, 0, 786451, 65536, 0, 786450, 65536, 0, 786449, 65536, 0, 786448, 0, 0, 1441798, 65536, 0, 1507336, 65536, 0, 1507337, 65536, 0, 1507338, 65536, 0, 1507339, 65536, 0, 1507340, 65536, 0, 1507341, 65536, 0, 1507342, 65536, 0, 1638424, 65536, 0, 1900614, 0, 0, 1900615, 262144, 0, 1900616, 262144, 0, 1900617, 262144, 0, 1900618, 262144, 0, 1900619, 262144, 0, 1900620, 327680, 0, 2359320, 0, 2, 2359321, 262144, 2, 2359322, 262144, 2, 2359323, 262144, 2, 2359324, 262144, 2, 2359325, 327680, 2, 2687000, 0, 0, 2687031, 327680, 0, 2752569, 327680, 0, 3014728, 327680, 0, 3080265, 327680, 0, 2752536, 0, 1, 2883607, 0, 0, 2949143, 0, 1, 3014679, 0, 1, 2162695, 65536, 0, 2162696, 65536, 0, 2162697, 65536, 0, 2162698, 65536, 0, 2162699, 65536, 0, 2162700, 65536, 0, 2162701, 327680, 0, 852039, 65536, 0, 2555913, 327680, 2, -196534, 327680, 0, -130998, 327680, 1, 131140, 327680, 0, 262211, 327680, 2, 262198, 262144, 2, 131125, 0, 0, 262197, 0, 2, -196521, 0, 0, 852030, 0, 0, 1048641, 65536, 2, 1048642, 327680, 2, 983051, 0, 1, 1048606, 327680, 2, 1376262, 327680, 0, 1441799, 327680, 0, 1507343, 327680, 0, 1572886, 327680, 0, 1638425, 327680, 0, 1703961, 327680, 2, 1703960, 262144, 2, 1048586, 458752, 0, 1310725, 589824, 2, 1245189, 589824, 2, 1179653, 589824, 1, 1179654, 589824, 0, 1376265, 589824, 0, 1376267, 589824, 0, 1376266, 393216, 1, 1441802, 393216, 2, 1769513, 327680, 2, 1769501, 0, 2, 1703965, 0, 0, 1703977, 327680, 0, 1966130, 0, 0, 2031666, 0, 2, 2097203, 0, 2, 2162740, 0, 2, 2031682, 327680, 2, 1966146, 327680, 0, 1966156, 327680, 2, 1966150, 0, 2, 1966151, 65536, 2, 1966152, 65536, 2, 1966153, 65536, 2, 1966154, 65536, 2, 1966155, 65536, 2, 2162766, 0, 0, 2228302, 0, 2, 2228303, 262144, 2, 2228304, 262144, 2, 2621494, 327680, 0, 2621528, 262144, 2, 2097241, 262144, 0, 3145730, 262144, 0, 3145729, 262144, 0, 2293789, 327680, 0, 2293780, 262144, 2, 2293788, 262144, 0, 2293787, 262144, 0, 2293786, 262144, 0, 2293785, 262144, 0, 2293784, 0, 0, 1769490, 327680, 2, 1900548, 327680, 1, 2949123, 262144, 2, 2949122, 262144, 2, 131160, 655360, 5, 524376, 196608, 5, 720984, 720896, 5, 1179736, 196608, 5, -196519, 131072, 5, 90, 196608, 5, 1245274, 655360, 5, 196699, 655360, 5, 1441883, 655360, 5, -65444, 655360, 5, 393308, 655360, 5, 1638492, 720896, 5, 786505, 720896, 5, 655434, 655360, 5, 655441, 131072, 5, 852053, 655360, 5, 983122, 196608, 5, 1048661, 720896, 5, 917572, 196608, 5, 983097, 720896, 5, 983102, 655360, 5, 720922, 655360, 5, 917530, 720896, 5, 655391, 655360, 5, 917535, 131072, 5, 917537, 131072, 5, 786466, 131072, 5, 917547, 196608, 5, 852013, 131072, 5, 655407, 131072, 5, 786482, 655360, 5, 589863, 720896, 5, 589866, 131072, 5, 196664, 720896, 5, 196668, 720896, 5, 196670, 720896, 5, 786456, 720896, 5, 917518, 196608, 5, 983057, 196608, 5, 1048594, 131072, 5, -131037, 655360, 5, -131033, 720896, 5, -196563, 196608, 5, -131022, 131072, 5, -196557, 655360, 5, -196545, 655360, 5, -196538, 131072, 5, -131000, 131072, 5, 3, 196608, 5, 65540, 655360, 5, 65541, 131072, 5, 6, 131072, 5, 7, 196608, 5, 9, 720896, 5, 65545, 720896, 5, 65546, 196608, 5, 65547, 720896, 5, 13, 655360, 5, 14, 720896, 5, 16, 131072, 5, 18, 196608, 5, 24, 196608, 5, 26, 655360, 5, 65563, 720896, 5, 1638407, 131072, 5, 1703945, 655360, 5, 1638412, 131072, 5, 1703951, 655360, 5, 1703953, 196608, 5, 2424838, 196608, 5, 2359303, 655360, 5, 2359305, 720896, 5, 2293771, 196608, 5, 3211268, 196608, 5, 3342348, 720896, 5, 3342350, 196608, 5, 3211279, 196608, 5, 3342352, 131072, 5, 3211285, 720896, 5, 3342361, 720896, 5, 3211295, 655360, 5, 3342369, 720896, 5, 3342371, 720896, 5, 3342372, 131072, 5, 3211303, 720896, 5, 3211307, 655360, 5, 3211308, 131072, 5, 3342381, 196608, 5, 3342383, 131072, 5, 3342384, 196608, 5, 3211316, 655360, 5, 3211318, 196608, 5, 3211320, 131072, 5, 3276858, 720896, 5, 3211325, 720896, 5, 3211326, 720896, 5, 3211337, 720896, 5, 3211338, 655360, 5, 3211340, 131072, 5, 3342415, 720896, 5, 3211346, 720896, 5, 3211348, 196608, 5, 3211349, 720896, 5, 3211350, 196608, 5, 3342424, 655360, 5, 2818075, 655360, 5, 2752552, 131072, 5, 2752560, 655360, 5, 3014699, 196608, 5, 3014708, 196608, 5, 3014710, 196608, 5, 2031668, 655360, 5, 2031670, 196608, 5, 2031671, 720896, 5, 2097210, 131072, 5, 2162775, 131072, 5, 2162777, 131072, 5, 2490456, 196608, 5, 2424921, 655360, 5, 2490457, 131072, 5, 2162769, 655360, 5, 2162772, 655360, 5, 1769505, 196608, 5, 1769508, 655360, 5, 65593, 458752, 6, 65594, 524288, 4, 65598, 131072, 2, 65599, 524288, 4, 786501, 524288, 4, 786503, 131072, 2, 524362, 196608, 2, 786495, 196608, 2, 786498, 524288, 4, 852024, 131072, 2, 852029, 458752, 6, 786486, 131072, 2, 524335, 524288, 4, 458791, 196608, 2, 458787, 458752, 6, 458785, 131072, 2, 589846, 458752, 6, 524313, 458752, 6, 720915, 196608, 2, 720912, 458752, 6, 786446, 458752, 6, 851980, 458752, 6, 1310726, 524288, 4, 1441800, 458752, 6, 1441803, 524288, 4, 1441805, 458752, 6, 1507347, 458752, 6, 1507349, 131072, 2, 1572888, 458752, 6, 1638429, 131072, 2, 1638430, 131072, 2, 1638431, 524288, 4, 1638432, 196608, 2, 1638436, 524288, 4, 1638437, 131072, 2, 1638438, 524288, 4, 1900597, 131072, 2, 1900599, 131072, 2, 1900600, 458752, 6, 1900607, 524288, 4, 1835083, 196608, 2, 1835084, 458752, 6, 1835079, 131072, 2, 1835080, 131072, 2, 2031702, 524288, 4, 2031703, 196608, 2, 3080269, 196608, 2, 3080272, 458752, 6, 3080274, 131072, 2, 3080278, 524288, 4, 2949192, 458752, 6, 2949189, 196608, 2, 2949188, 458752, 6, 2883650, 131072, 2, 2883645, 524288, 4, 2687033, 524288, 4, 2555955, 131072, 2, 2555953, 131072, 2, 2555952, 131072, 2, 2555950, 524288, 4, 2555947, 458752, 6, 2555946, 524288, 4, 2490409, 131072, 2, 2490406, 458752, 6, 2555939, 458752, 6, 2555934, 524288, 4, 2621468, 458752, 6, 2621464, 393216, 2, 3080214, 524288, 4, 3080210, 524288, 4, 3080207, 196608, 2, 3080200, 131072, 2, 2162704, 458752, 6, 2228248, 524288, 4, 2228250, 458752, 6, 2097159, 196608, 2, 2097160, 458752, 6, 2097161, 524288, 4, 2097162, 458752, 6, 2097164, 524288, 4, 72, 196608, 1, 59, 131072, 1, 58, 393216, 6, 55, 393216, 6, 54, 196608, 1, 53, 131072, 1, 52, 131072, 1, 51, 458752, 4, 49, 393216, 6, 48, 393216, 6, 41, 458752, 4, 65572, 196608, 1, 65571, 458752, 4, 65570, 458752, 4, 196632, 393216, 6, 196628, 458752, 4, 196627, 458752, 4, 196626, 131072, 1, 196621, 131072, 1, 196618, 131072, 1, 196616, 196608, 1, 327686, 393216, 6, 1179664, 131072, 1, 1245203, 393216, 6, 1114141, 196608, 1, 1048609, 458752, 4, 1114148, 196608, 1, 1114150, 131072, 1, 1114154, 458752, 4, 1114155, 393216, 6, 1114157, 458752, 4, 1114161, 458752, 4, 1114162, 458752, 4, 1114167, 393216, 6, 1114175, 458752, 4, 1048647, 196608, 1, 1048651, 131072, 1, 1114189, 393216, 6, 1179727, 458752, 4, 1179728, 393216, 6, 1179729, 393216, 6, 1835018, 458752, 4, 1835019, 196608, 1, 1835020, 458752, 4, 1835023, 458752, 4, 1769495, 131072, 1, 1769497, 196608, 1, 1835038, 393216, 6, 1835039, 458752, 4, 1900580, 196608, 1, 1835048, 458752, 4, 2228276, 458752, 4, 2228279, 393216, 6, 2228282, 458752, 4, 2228284, 393216, 6, 2162750, 393216, 6, 2097218, 458752, 4, 2031687, 131072, 1, 2031688, 131072, 1, 2031689, 196608, 1, 2031690, 393216, 6, 2293839, 196608, 1, 2293840, 393216, 6, 2293842, 458752, 4, 2293844, 196608, 1, 2293846, 196608, 1, 2555914, 131072, 1, 2555917, 196608, 1, 2555920, 131072, 1, 1441880, 655360, 5, 1376343, 0, 1, 1179735, 0, 1, -131002, 720896, 5, -131005, 196608, 5, -131010, 196608, 5, -131013, 131072, 5, -131015, 655360, 5, -65482, 262144, 2, -65483, 262144, 2, -65484, 262144, 2, -65485, 262144, 2, -65486, 262144, 2, -65487, 262144, 2, -65488, 262144, 2, -65489, 262144, 2, 983112, 262144, 2, 1900594, 393216, 2, 1835058, 393216, 1, 1835057, 393216, 0, 1835059, 589824, 0, 1835060, 589824, 1, 1900596, 589824, 2, 1835061, 589824, 0, 3014677, 589824, 1, 3014678, 589824, 0, 3080213, 589824, 2, 1703978, 524288, 0, 1703979, 589824, 0, 262196, 393216, 1, 262195, 393216, 0, 2555928, 393216, 1, 2555927, 393216, 0, 2555926, 393216, 0, 196660, 458752, 1, 2621465, 458752, 1, 1376263, 458752, 1, 1441801, 524288, 1, 1966147, 524288, 0, 1966148, 589824, 0, 1966149, 458752, 0, 1900621, 524288, 0, 2687066, 0, 1, 2752602, 0, 1, 2818138, 0, 1, 2883674, 0, 1, 2949210, 0, 1, 3014746, 0, 1, 3080282, 0, 1, 1769562, 0, 1, 1835098, 0, 1, 1900634, 0, 1, 1966170, 0, 1, 2031706, 0, 1, 1704025, 262144, 2, 3014656, 327680, 1, 3080192, 327680, 1, 2949121, 262144, 2, 1769500, 458752, 0, 2293781, 327680, 2)

[node name="UI" parent="." instance=ExtResource("5_w85c3")]

[node name="BGParticles" parent="." instance=ExtResource("6_yqvqw")]

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.945098, 0.960784, 0.964706, 1)

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(55.7356, 250.68)

[node name="PortalToGreenOne" type="Area2D" parent="."]
position = Vector2(16.7011, 377.594)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PortalToGreenOne"]
position = Vector2(0.366486, -0.140198)
shape = SubResource("RectangleShape2D_efhj2")

[node name="PortalToGreenThree1" type="Area2D" parent="."]
position = Vector2(716.049, 236.865)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PortalToGreenThree1"]
position = Vector2(0.153748, 0.260437)
shape = SubResource("RectangleShape2D_v164d")

[node name="PortalToGreenThree2" type="Area2D" parent="."]
position = Vector2(717.457, 356.526)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PortalToGreenThree2"]
position = Vector2(-0.104858, 0.386505)
shape = SubResource("RectangleShape2D_klnkw")

[node name="Orbs" parent="." instance=ExtResource("12_csjpi")]
position = Vector2(-12.3838, -26.4169)

[node name="Ladder1" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 407.216
offset_top = 36.4801
offset_right = 447.216
offset_bottom = 76.4801

[node name="Ladder" parent="Ladder1" instance=ExtResource("13_4t57r")]
position = Vector2(-1.49292, -1.91759)

[node name="Ladder2" parent="Ladder1" instance=ExtResource("13_4t57r")]
position = Vector2(-1.38168, 9.56447)

[node name="Ladder3" parent="Ladder1" instance=ExtResource("13_4t57r")]
position = Vector2(-1.38168, 20.1934)

[node name="ClimbRange" type="Area2D" parent="Ladder1"]
position = Vector2(-1.01318, 18.4576)
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ladder1/ClimbRange"]
position = Vector2(0.282257, -5.56614)
shape = SubResource("RectangleShape2D_mror4")

[node name="Ladder2" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 246.141
offset_top = 284.927
offset_right = 286.141
offset_bottom = 324.927

[node name="Ladder" parent="Ladder2" instance=ExtResource("13_4t57r")]
position = Vector2(-56.7819, -1.78383)

[node name="Ladder2" parent="Ladder2" instance=ExtResource("13_4t57r")]
position = Vector2(-56.6706, 9.69823)

[node name="ClimbRange" type="Area2D" parent="Ladder2"]
position = Vector2(-56.3021, 18.5914)
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ladder2/ClimbRange"]
position = Vector2(0, -11.104)
shape = SubResource("RectangleShape2D_00e3d")

[node name="Ladder3" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 229.641
offset_top = 316.177
offset_right = 269.641
offset_bottom = 356.177

[node name="Ladder" parent="Ladder3" instance=ExtResource("13_4t57r")]
position = Vector2(-56.7819, -1.78383)

[node name="Ladder2" parent="Ladder3" instance=ExtResource("13_4t57r")]
position = Vector2(-56.6706, 9.69823)

[node name="ClimbRange" type="Area2D" parent="Ladder3"]
position = Vector2(-56.3021, 18.5914)
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ladder3/ClimbRange"]
position = Vector2(0, -11.104)
shape = SubResource("RectangleShape2D_00e3d")

[node name="Ladder4" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 277.512
offset_top = 220.218
offset_right = 317.512
offset_bottom = 260.218

[node name="Ladder" parent="Ladder4" instance=ExtResource("13_4t57r")]
position = Vector2(-56.7819, -1.78383)

[node name="Ladder2" parent="Ladder4" instance=ExtResource("13_4t57r")]
position = Vector2(-56.6706, 9.69823)

[node name="Ladder3" parent="Ladder4" instance=ExtResource("13_4t57r")]
position = Vector2(-56.9394, 20.4223)

[node name="Ladder4" parent="Ladder4" instance=ExtResource("13_4t57r")]
position = Vector2(-56.8281, 31.9043)

[node name="Ladder5" parent="Ladder4" instance=ExtResource("13_4t57r")]
position = Vector2(-56.9856, 42.6136)

[node name="ClimbRange" type="Area2D" parent="Ladder4"]
position = Vector2(-56.3021, 18.5914)
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ladder4/ClimbRange"]
position = Vector2(0.320709, 4.83775)
shape = SubResource("RectangleShape2D_1efos")

[connection signal="body_entered" from="PortalToGreenOne" to="." method="_on_portal_to_green_one_body_entered"]
[connection signal="body_entered" from="PortalToGreenThree1" to="." method="_on_portal_to_green_three_1_body_entered"]
[connection signal="body_entered" from="PortalToGreenThree2" to="." method="_on_portal_to_green_three_2_body_entered"]
